--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ img.hover-shadow {
 </style>
 <body>
 
-<h2 style="text-align:center"><br>ZooOOoOoOmed In</h2>
+<h2 style="text-align:center"><br>Zoomed In</h2>
 <div class="grid">
 <div class="row">
 <div class="column">
